--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
-<meta charset="UTF-8">
-<title> BARBEARIA BUENO
+<html lang = "pt-br">
 <head>
-   < meta charset="UTF-8">
-    <title> BARBEARIA <BUENO>
+    <meta charset="UTF-8">
+    <title> Barbearia Bueno</title>
 </head>
 <body>
+    <h1>Barbearia Bueno </h1>
+<p>Localizada no coração da cidade, a Barbearia Bueno traz para o mercado o que há de melhor para o seu cabelo e barba.</p>
+<p>Fundada em 2019, a Barbearia Bueno já é destaque na cidade e conquista novos clientes a cada dia pelo custo benefício dos serviços prestados.</p>
+<p>Nossa missão é: “Proporcionar auto-estima e qualidade de vida aos nossos clientes”</p>
+<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. </p>
+<p>O atendimento possui padrão de excelência e agilidade, garantindo e satisfação dos nossos clientes</p>
+
+<ul>
+    <h2>BENEFÍCIOS</h2>
+    <li>Atendimento especializado </li>
+    <li>Espaço diferenciado</li>
+    <li>Clientes satisfeitos</li>
+</ul>
+   
+</body>
+</html>
+<img src ="beneficios (1).jpg" alt="imagem beneficios">
 
 </body>
+</html>
