--- a/index.html
+++ b/index.html
@@ -3,25 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title> Barbearia Bueno</title>
-</head>
+<link rel="stylesheet" href="style.css">
+<head
 <body>
-    <h1>Barbearia Bueno </h1>
-<p>Localizada no coração da cidade, a Barbearia Bueno traz para o mercado o que há de melhor para o seu cabelo e barba.</p>
-<p>Fundada em 2019, a Barbearia Bueno já é destaque na cidade e conquista novos clientes a cada dia pelo custo benefício dos serviços prestados.</p>
-<p>Nossa missão é: “Proporcionar auto-estima e qualidade de vida aos nossos clientes”</p>
-<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. </p>
-<p>O atendimento possui padrão de excelência e agilidade, garantindo e satisfação dos nossos clientes</p>
+    <h1 class="titulo-1" BARBEARIA BUENO</h1>
+    
+<p class="paragrafo-1">Localizada no coração da cidade, a Barbearia Bueno traz para o mercado o que há de melhor para o seu cabelo e barba.</p>
+<p class="paragrafo-1">Fundada em 2019, a Barbearia Bueno já é destaque na cidade e conquista novos clientes a cada dia pelo custo benefício dos serviços prestados.</p>
+<p class =paragrafo-1>Nossa missão é: “Proporcionar auto-estima e qualidade de vida aos nossos clientes”</p>
+<p class="paragrafo-1">Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. </p>
+<p class="paragrafo-1">O atendimento possui padrão de excelência e agilidade, garantindo e satisfação dos nossos clientes</p>
 
-<ul>
-    <h2>BENEFÍCIOS</h2>
-    <li>Atendimento especializado </li>
-    <li>Espaço diferenciado</li>
-    <li>Clientes satisfeitos</li>
-</ul>
-   
-</body>
-</html>
-<img src ="beneficios (1).jpg" alt="imagem beneficios">
+<h2 class ="titulo-2">beneficios</h2>
 
-</body>
-</html>
+<ul class="lista">
