--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <title> Barbearia Bueno</title>
 <link rel="stylesheet" href="style.css">
 <head
+
+<header>
+  <h1>BARBEARIA BUENO</h1>
+
+  <ul>
+       <li></li>
+
 <body>
     <h1 class="titulo-1" BARBEARIA BUENO</h1>
     
