--- a/index.html
+++ b/index.html
@@ -10,17 +10,41 @@
   <h1>BARBEARIA BUENO</h1>
 
   <ul>
-       <li></li>
+       <li> ATENDIMENTO AO CLIENTE</li>
+       </li> MEUS PRODUTOS </li>
+       </li> HORARIO DE ATENDIMENTO </li
+       </ul
+
+</header>
 
 <body>
+    
+</body>
     <h1 class="titulo-1" BARBEARIA BUENO</h1>
     
 <p class="paragrafo-1">Localizada no coração da cidade, a Barbearia Bueno traz para o mercado o que há de melhor para o seu cabelo e barba.</p>
-<p class="paragrafo-1">Fundada em 2019, a Barbearia Bueno já é destaque na cidade e conquista novos clientes a cada dia pelo custo benefício dos serviços prestados.</p>
-<p class =paragrafo-1>Nossa missão é: “Proporcionar auto-estima e qualidade de vida aos nossos clientes”</p>
-<p class="paragrafo-1">Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. </p>
-<p class="paragrafo-1">O atendimento possui padrão de excelência e agilidade, garantindo e satisfação dos nossos clientes</p>
+<p class="paragrafo-2">Fundada em 2019, a Barbearia Bueno já é destaque na cidade e conquista novos clientes a cada dia pelo custo benefício dos serviços prestados.</p>
+<p class =paragrafo-3>Nossa missão é: “Proporcionar auto-estima e qualidade de vida aos nossos clientes”</p>
+<p class="paragrafo-4">Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. </p>
+<p class="paragrafo-5">O atendimento possui padrão de excelência e agilidade, garantindo e satisfação dos nossos clientes</p>
 
 <h2 class ="titulo-2">beneficios</h2>
 
-<ul class="lista">
+<ul class="lista  titulo-1">
+</li>Atendimento especializado</li>
+</li>Espaço diferenciado</li>
+</li>Clientes satisfeitos</li>
+</ul>
+
+<img class = "imagem -1" src= "beneficios (1).jpg" alt="imagem beneficios">
+
+<footer>
+    <p>Para mais informações acesse nossos contatos abaixo:</p>
+    <p>Instagram:@barbearia.bueno_ </p>
+    <p>Facebook:Barbearia Bueno</p>
+    <p>TEL:(42)99999-9999</p>
+    </footer>
+
+
+</body>
+</html>
