--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   <ul>
        <li> ATENDIMENTO AO CLIENTE</li>
        </li> MEUS PRODUTOS </li>
-       </li> HORARIO DE ATENDIMENTO </li
-       </ul
+       </li> HORARIO DE ATENDIMENTO </li>
+    </ul>
 
 </header>
 
 <body>
     
-</body>
+
     <h1 class="titulo-1" BARBEARIA BUENO</h1>
     
 <p class="paragrafo-1">Localizada no coração da cidade, a Barbearia Bueno traz para o mercado o que há de melhor para o seu cabelo e barba.</p>
