--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <title> Barbearia Bueno</title>
 <link rel="stylesheet" href="style.css">
-<head
+</head>
 
 <header>
+
+    <img src="barbearia_alura.png" alt="imagem -barbearia"
+
   <h1>BARBEARIA BUENO</h1>
 
   <ul>
