--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <header>
 
-    <img src="barbearia_alura.png" alt="imagem -barbearia"
+    <img src="barbearia_alura.png" alt="imagem -barbearia">
 
   <h1>BARBEARIA BUENO</h1>
 
